# epitope_pipeline_refactor

./: .gitignore  HISTORY.md  README.md  app.py  bispecific.py  config.py  conservation.py  export.py  export_bispecific.py  membrane.py  pyproject.toml  run.py  scoring.py  spatial.py  specificity.py  specificity_diagnostics.py  surface.py  target_input.py  test_specificity_params.py  visualize.py  visualize_bispecific.py
archive/: README.md  debug_sliding_window.py
archive/diagnostics_deprecated/: generate_ceacam5_diagnostics.py  parameter_sweep.py  (+3 more)
benchmarks/: README.md  baseline_2026-04-29_2d07c5c.json  run_baseline.py
diagnostics/: README.md  bispecific_parameter_sweep.py  bispecific_parameter_sweep_2d.py  plot_specificity_sweep.py  run_abcc11_smpdl3b.py  run_adam8_itgb6_sweep.py  run_bispecific_batch.py  specificity_diagnostics.py
epitope_pipeline/: __init__.py  bispecific.py  config.py  export.py  export_bispecific.py  membrane.py  requirements.txt  run.py  single.py  specificity.py  structure.py  utils.py  visualize_bispecific.py
scripts/: pcdhb2_domain_analysis.py  setup_blast_db.sh  spin_video.pml  spin_video_draft.pml
tests/: _fixtures.py  conftest.py  test_bispecific_cli.py  test_compute_conservation.py  test_compute_conservation_dispatch.py  test_compute_conservation_local.py  test_compute_scoring.py  test_compute_specificity.py  test_compute_surface.py  test_config_cyno.py  test_imports.py  test_pipeline_smoke.py  test_run_cli.py  test_run_mode_labels.py  test_single.py  test_single_cli.py  test_summary_dataframe.py  test_viz_footer.py
(+18 files in other folders)
