[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epitope-pipeline"
version = "0.2.0"
description = "Structural bioinformatics pipeline for VHH epitope discovery on human membrane proteins."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Jeff Verboon"}]
dependencies = [
    "numpy>=1.24,<2.0",
    "scipy>=1.10",
    "biopython>=1.81",
    "freesasa>=2.2.0",
    "requests>=2.28",
    "matplotlib>=3.7.1",
    "openpyxl>=3.0",
]

[project.optional-dependencies]
app = ["streamlit>=1.28"]
dev = ["pytest>=8.0"]

[project.scripts]
epitope-pipeline = "epitope_pipeline.run:main"
epitope-bispecific = "epitope_pipeline.bispecific:main"

[tool.setuptools.packages.find]
include = ["epitope_pipeline*"]
exclude = ["tests*", "diagnostics*", "scripts*", "archive*"]

[tool.pytest.ini_options]
markers = [
    "slow: end-to-end tests that may hit network on first run",
]
addopts = "-m 'not slow'"
